Implementation for an operator to retrieve all system billing history