@@ -1,5 +1,6 @@
 package com.soen343.tbd.application.service;
 
+import com.soen343.tbd.application.dto.billing.AllBillingHistoryResponse;
 import com.soen343.tbd.application.dto.billing.UserBillingHistoryResponse;
 import com.soen343.tbd.application.dto.billing.UserPaymentRequest;
 import com.soen343.tbd.domain.model.Bill;
@@ -63,6 +64,23 @@ public class BillingService {
         logger.info("Successfully fetched billing history for user: {}", userEmail);
         return createBillingHistoryResponse(trips, bills, user);
     }
+
+    @Transactional(readOnly = true)
+    public AllBillingHistoryResponse getAllSystemBillingHistory() {
+        logger.info("Starting process to get all system billing history...");
+
+        // Fetch all trips
+        List<Trip> allTrips = tripRepository.findAll();
+        logger.debug("Found {} total trips in the system", allTrips.size());
+
+        // Fetch all bills
+        List<Bill> allBills = billRepository.findAll();
+        logger.debug("Found {} total bills in the system", allBills.size());
+
+        logger.info("Successfully fetched all system billing history");
+        return createAllSystemBillingHistoryResponse(allTrips, allBills);
+    }
+
 
     /**
      * Process payment for a bill
@@ -130,6 +148,13 @@ public class BillingService {
 
         // Build the list of TripBillDTO objects
         List<UserBillingHistoryResponse.TripBillDTO> tripBills = trips.stream()
+                .filter(trip -> {
+                    // Exclude trips that are incomplete (no bill or bill status is null, and trip not finished)
+                    Bill bill = billByTripId.get(trip.getTripId().value());
+                    boolean hasBillWithStatus = bill != null && bill.getStatus() != null;
+                    boolean isTripComplete = trip.getEndTime() != null;
+                    return hasBillWithStatus || isTripComplete;
+                })
                 .map(trip -> {
                     Bill bill = billByTripId.get(trip.getTripId().value());
 
@@ -149,7 +174,7 @@ public class BillingService {
                             trip.getEndTime(),
                             Math.round(trip.calculateDurationInMinutes()),
                             bill != null ? bill.getBillId().value() : null,
-                            bill != null ? bill.getStatus().name() : "PENDING",
+                            bill != null && bill.getStatus() != null ? bill.getStatus().name() : "PENDING",
                             trip.getPricingStrategy() != null ? trip.getPricingStrategy().getPricingTypeName() : "Standard Bike Pricing",
                             trip.getPricingStrategy() != null ? trip.getPricingStrategy().getBaseFee() : 0.0,
                             trip.getPricingStrategy() != null ? trip.getPricingStrategy().getPerMinuteRate() : 0.0,
@@ -165,8 +190,8 @@ public class BillingService {
 
         // Calculate outstanding bills (PENDING status only, PAID bills are already settled)
         List<Bill> outstandingBills = bills.stream()
-                .filter(bill -> "PENDING".equals(bill.getStatus().name()))
-                .collect(Collectors.toList());
+                .filter(bill -> bill.getStatus() != null && "PENDING".equals(bill.getStatus().name()))
+                .toList();
 
         Double totalOutstandingAmount = outstandingBills.stream()
                 .mapToDouble(Bill::getCost)
@@ -183,6 +208,86 @@ public class BillingService {
                 totalOutstandingAmount,
                 totalOutstandingBills,
                 tripBills
+        );
+    }
+
+    private AllBillingHistoryResponse createAllSystemBillingHistoryResponse(List<Trip> trips, List<Bill> bills) {
+        // Create a map of bills by trip ID for easy lookup
+        Map<Long, Bill> billByTripId = bills.stream()
+                .collect(Collectors.toMap(
+                        bill -> bill.getTripId().value(),
+                        bill -> bill
+                ));
+
+        // Build the list of SystemTripBillDTO objects with user information
+        List<AllBillingHistoryResponse.SystemTripBillDTO> systemTripBills = trips.stream()
+                .filter(trip -> {
+                    // Exclude trips that are incomplete (no bill or bill status is null, and trip not finished)
+                    Bill bill = billByTripId.get(trip.getTripId().value());
+                    boolean hasBillWithStatus = bill != null && bill.getStatus() != null;
+                    boolean isTripComplete = trip.getEndTime() != null;
+                    return hasBillWithStatus || isTripComplete;
+                })
+                .map(trip -> {
+                    Bill bill = billByTripId.get(trip.getTripId().value());
+
+                    // Get user information
+                    User user = userRepository.findById(trip.getUserId())
+                            .orElse(null);
+                    String userEmail = user != null ? user.getEmail() : "Unknown";
+                    String userFullName = user != null ? user.getFullName() : "Unknown";
+
+                    // Get station names (handle null for trips in progress)
+                    Station startStation = stationRepository.findById(trip.getStartStationId()).orElse(null);
+                    Station endStation = stationRepository.findById(trip.getEndStationId()).orElse(null);
+
+                    String startStationName = startStation != null ? startStation.getStationName() : "Unknown";
+                    String endStationName = endStation != null ? endStation.getStationName() : "In Progress";
+
+                    return new AllBillingHistoryResponse.SystemTripBillDTO(
+                            trip.getTripId().value(),
+                            trip.getUserId().value(),
+                            userEmail,
+                            userFullName,
+                            trip.getBikeId().value(),
+                            startStationName,
+                            endStationName,
+                            trip.getStartTime(),
+                            trip.getEndTime(),
+                            Math.round(trip.calculateDurationInMinutes()),
+                            bill != null ? bill.getBillId().value() : null,
+                            bill != null && bill.getStatus() != null ? bill.getStatus().name() : "PENDING",
+                            trip.getPricingStrategy() != null ? trip.getPricingStrategy().getPricingTypeName() : "Standard Bike Pricing",
+                            trip.getPricingStrategy() != null ? trip.getPricingStrategy().getBaseFee() : 0.0,
+                            trip.getPricingStrategy() != null ? trip.getPricingStrategy().getPerMinuteRate() : 0.0,
+                            bill != null ? bill.getCost() : 0.0
+                    );
+                })
+                .collect(Collectors.toList());
+
+        // Calculate total system revenue (all bills)
+        Double totalSystemRevenue = bills.stream()
+                .mapToDouble(Bill::getCost)
+                .sum();
+
+        // Calculate outstanding bills (PENDING status only)
+        List<Bill> outstandingBills = bills.stream()
+                .filter(bill -> bill.getStatus() != null && "PENDING".equals(bill.getStatus().name()))
+                .toList();
+
+        Double totalSystemOutstandingAmount = outstandingBills.stream()
+                .mapToDouble(Bill::getCost)
+                .sum();
+
+        Integer totalSystemOutstandingBills = outstandingBills.size();
+
+        // Build and return the response
+        return new AllBillingHistoryResponse(
+                totalSystemRevenue,
+                trips.size(),
+                totalSystemOutstandingAmount,
+                totalSystemOutstandingBills,
+                systemTripBills
         );
     }
 }
